# proteomics

./: README.md  pyproject.toml
.github/workflows/: main.yaml
tests/: __init__.py  conftest.py
tests/data/fastas/: BSA1.fasta.1.pepindex  HGI_FASTA_ModuleAndB.fasta  Hfvol_prot_230328_bridgeCDS_cRAP_target-decoy_trypsin.fasta
tests/data/instanovo_params/: default.yaml
tests/data/meta_data/: 5832277fafa758daf43584d38502eb47_1.spectra_meta.csv
tests/data/mgfs/: BSA1.mgf
tests/data/mzids/: BSA1_msgfplus_2021_03_22.mzid
tests/data/pyiohat_json/: pyiohat_params.json
tests/data/usermods/: unimod_no_carbamidomethyl.xml  usermods_carbamidomethyl.xml
tests/integrationtests/wrappers/: test_casanovo.py  test_instanovo.py  test_pyiohat.py  test_pymzml_to_idxgz.py  test_pymzml_to_mgf.py  test_spectrum_meta_data.py  test_target_generate_decoy_fasta.py  test_thermorawfileparser.py
tests/unittests/: README.md
urgap/resources/: README.md  __init__.py
urgap/resources/MsDataConversion/: __init__.py
urgap/resources/generate_target_decoy_fasta_2_0_0/: __init__.py
urgap/resources/generate_target_decoy_fasta_2_0_0/2_0_0/: __init__.py  generate_target_decoy_fasta_2_0_0.py
urgap/resources/ms_data_conversion/: __init__.py
urgap/resources/ms_data_conversion/pymzml_to_idxgz/: __init__.py
urgap/resources/ms_data_conversion/pymzml_to_mgf/: __init__.py
urgap/resources/ms_data_conversion/thermorawfileparser/: __init__.py
urgap/resources/ms_data_extraction/1_0_0/: extract_meta_data.py
urgap/resources/pyiohat/: __init__.py
urgap/resources/pyiohat/1_9_0/: __init__.py  pyiohat-resource.py  pyiohat_resource.py
urgap/ufile/io/: my_io.py
urgap/uftypes/: __init__.py  ms.py  my_uftype.py  proteomics.py
urgap/unodes/casanovo/: __init__.py  casanovo_5_0_0.py  casanovo_5_1_2.py  casanovo_5_2_0.py
urgap/unodes/generate_target_decoy_fasta/: __init__.py  generate_target_decoy_fasta.py
urgap/unodes/instanovo/: __init__.py  instanovo_1_2_2.py
urgap/unodes/ms_data_conversion/: __init__.py
urgap/unodes/ms_data_conversion/ThermoRawToMzML/: ThermoRawFileParser.py  __init__.py
urgap/unodes/ms_data_extraction/: __init__.py
urgap/unodes/my_unode/: __init__.py  my_unode.py
urgap/unodes/pyiohat/: __init__.py  pyiohat.py
(+9 files in other folders)
