[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urgap-proteomics"
version = "0.0.1"
description = "Urgap proteomics specific extension"
requires-python = ">=3.11"
dependencies = [
    "urgap[all]",
    "pymzml>=2.5.0",
    "pyiohat>=1.9.0",
    "instanovo>=1.2.2",
    "flowkit>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.23",
    "urgap[dev]",
]


[tool.hatch.build.targets.wheel]
packages = ["urgap"]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
exclude = [
    ".git",
    "build",
    "dist",
    "docs"
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S", # Flake8 Bandit
    "E501", # Line too long
    "PLR2004", # Magic value comparison
    "RUF012", # Mutable class default
    "LOG015", # Root logger call
    "FBT001", # Boolean type hint positional argument
    "FBT002", # Boolean default value positional argument,
    "PYI034", # Wait until we drop 3.10 so Self is in typing
    "PLR0913", # Too many arguments -> TODO
    "TC003", # Causes false positives
    "D203", # Incompatible with D211
    "D213", # Incompatible with D212
    "D413", # For looks a bit more like google/numpy/pep257 style,
    "PLC0415", # Avoid unnecessary imports,
    "UP047", # Only available 3.13+
    "INP001", # Namespace packages intentionally have no __init__.py (PEP 420)
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["urgap"]
combine-as-imports = true
lines-between-types = 1

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
